--- a/app/views/churches/index.html.erb
+++ b/app/views/churches/index.html.erb
@@ -20,8 +20,9 @@
       <div class="w-full max-w-xl px-4" data-controller="address-search">
         <%= form_with url: churches_path, method: :get, class: "relative" do |f| %>
           <%= f.text_field :location,
+            value: @location,
             data: {
-              address_search_target: "input",
+              address_search_target: "input", 
               action: "input->address-search#search"
             },
             class: "w-full pr-24 py-4 rounded-lg text-gray-900 placeholder-gray-500 bg-white shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500",
