--- a/app/views/churches/new.html.erb
+++ b/app/views/churches/new.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-50 p-8">
+<div class="min-h-screen bg-gray-50 p-8 w-full">
   <div class="max-w-2xl mx-auto">
     <div class="bg-white rounded-lg shadow p-6">
       <h1 class="text-2xl font-bold mb-6">Adicionar Igreja</h1>
