--- a/app/views/addresses/search_churches.turbo_stream.erb
+++ b/app/views/addresses/search_churches.turbo_stream.erb
@@ -1,17 +1,33 @@
 <%= turbo_stream.update "church_results" do %>
-  <div class="mt-2 border rounded-lg divide-y">
-    <% @results.each do |result| %>
-      <%= form_with model: Church.new, class: "w-full" do |f| %>
-        <%= f.hidden_field :name, value: result.data["name"] %>
-        <%= f.hidden_field :address, value: result.address %>
-        <%= f.hidden_field :place_id, value: result.place_id %>
-        
-        <%= f.button type: "submit",
-          class: "w-full text-left px-4 py-3 hover:bg-gray-50" do %>
-          <div class="font-medium"><%= result.data["name"] %></div>
-          <div class="text-sm text-gray-600"><%= result.address %></div>
-        <% end %>
+  <% if @results.any? %>
+    <div class="mt-2 border rounded-lg divide-y">
+      <% @results.each do |result| %>
+        <div class="w-full px-4 py-3">
+          <label class="flex items-start gap-3 cursor-pointer group">
+            <input type="radio" 
+                   name="church_selection" 
+                   class="mt-1"
+                   data-church-selection-target="radio"
+                   data-action="church-selection#select"
+                   data-name="<%= result.data["name"] %>"
+                   data-address="<%= result.address %>"
+                   data-place-id="<%= result.place_id %>">
+            
+            <div class="flex-1">
+              <div class="font-medium group-hover:text-blue-600"><%= result.data["name"] %></div>
+              <div class="text-sm text-gray-600"><%= result.address %></div>
+            </div>
+          </label>
+        </div>
       <% end %>
-    <% end %>
-  </div>
+    </div>
+  <% else %>
+    <div class="mt-2 rounded-lg bg-gray-50 p-4 text-center">
+      <div class="text-gray-500">
+        <%= lucide_icon "search-x", class: "w-6 h-6 mx-auto mb-2" %>
+        <p>Nenhuma igreja encontrada com esse nome.</p>
+        <p class="text-sm">Tente buscar com um termo diferente.</p>
+      </div>
+    </div>
+  <% end %>
 <% end %> 
