--- a/app/views/mass_schedules/edit.html.erb
+++ b/app/views/mass_schedules/edit.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "new_mass_schedule" do %>
+<%= turbo_frame_tag "edit_mass_schedule" do %>
   <div class="p-4 w-full">
     <%= render "form" %>
   </div>
