--- a/app/views/mass_schedules/_mass_schedules.html.erb
+++ b/app/views/mass_schedules/_mass_schedules.html.erb
@@ -3,7 +3,7 @@
     <div class="flex items-center gap-2">
       <span class="font-medium"><%= I18n.t("date.day_names")[schedule.first].titleize %>: </span>
 
-      <span class="text-gray-700"><%= schedule.last.map { |day_schedule| format_time(day_schedule.start_time, day_schedule.church.timezone) }
+      <span class="text-gray-700"><%= schedule.last.map { |day_schedule| format_time_in_local_timezone(day_schedule.start_time, day_schedule.church.timezone) }
                                                    .join(", ") %></span>
     </div>
   <% end %>
