--- a/app/views/mass_schedules/edit.html.erb
+++ b/app/views/mass_schedules/edit.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "edit_mass_schedule" do %>
   <div class="p-4 w-full">
-    <%= render "form" %>
+    <%= render "form", url: church_mass_schedule_path(@church), method: :put %>
   </div>
 <% end %>
