--- a/app/views/mass_schedules/_schedule_fields.html.erb
+++ b/app/views/mass_schedules/_schedule_fields.html.erb
@@ -1,20 +1,20 @@
 <div class="flex items-center gap-4" id="schedule_<%= schedule.day_of_week %>_<%= index %>">
   <div class="w-32">
     <%= schedule_fields.check_box :active, class: "rounded border-gray-300 text-blue-600 mr-2" %>
-    <%= schedule_fields.label :active, @days[index][0].split('-').first.titleize, class: "font-medium" %>
+    <%= schedule_fields.label :active, @days[schedule.day_of_week][0].split('-').first.titleize, class: "font-medium" %>
   </div>
 
   <%= schedule_fields.hidden_field :day_of_week %>
 
   <div>
     <%= schedule_fields.time_field :start_time, 
-                    value: format_time_in_local_timezone(schedule.start_time, @church.timezone),
+                    value: format_time_in_local_timezone(schedule.start_time, church.timezone),
                     class: "rounded-lg border-gray-300 #{'opacity-50' unless schedule.active?}" %>
   </div>
 
-  <%= link_to add_schedule_church_mass_schedules_path(@church, 
-              day_of_week: schedule.day_of_week, 
-              index: index,
+  <%= link_to add_schedule_church_mass_schedules_path(church, 
+              day_of_week: schedule.day_of_week,
+              index: index + 1,
               target_dom_id: "schedule_#{schedule.day_of_week}_#{index}"),
               class: 'text-gray-500 hover:text-gray-700',
               data: { turbo_stream: true, turbo_method: :post } do %>
